# SubtitleStudio-QT

./: .gitignore  CMakeLists.txt  README.md
cmake/: findLIBVLC.cmake
src/: CMakeLists.txt  Main.cpp  NewProjectWizard.cpp  NewProjectWizard.h  Project.cpp  Project.h  StudioWindow.cpp  StudioWindow.h  Subtitle.cpp  Subtitle.h
ui/: StudioWindow.ui
